# accomplish-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  USER_GUIDE.md  install.sh
.claude/commands/: fix-issue.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  errors.rs  main.rs  storage.rs  user_agent.rs
src/api/: client.rs  endpoints.rs  errors.rs  mod.rs  models.rs
src/auth/: auth.rs  callback_server.rs  mod.rs
src/commands/: capture.rs  init.rs  log.rs  login.rs  logout.rs  logs.rs  mod.rs  project.rs  recap.rs  status.rs
src/utils/: duration.rs  editor.rs  mod.rs  spinner.rs
