[package]
name = "accomplish-cli"
version = "0.3.0"
edition = "2021"
description = "A command-line tool for interacting with the Accomplish platform to log work entries and manage projects."
authors = ["Rui Freitas <rodloboz@heycom>"]
repository = "https://github.com/typhoonworks/accomplish-cli"
license = "Apache-2.0"
keywords = ["cli", "productivity", "task-management", "worklog"]
categories = ["command-line-utilities"]
default-run = "acc"
readme = "README.md"
homepage = "https://accomplish.dev"

[[bin]]
name = "acc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
crossterm = "0.29"
dirs-next = "2.0"
git2 = { version = "0.18", default-features = false }
inquire = "0.7"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.15"
thiserror = "2.0"
toml = "0.9"
tokio = { version = "1.46", features = ["full"] }
url = "2.5"
webbrowser = "1.0"

[dev-dependencies]
mockito = "0.30.0"
serde_json = "1.0"
serial_test = "3.2"
tempfile = "3.10"
tokio = { version = "1.46", features = ["full"] }
uuid = { version = "1.17", features = ["v4"] }
